menambahkan readme.md

--- a/home.html
+++ b/home.html
@@ -11,11 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ASABROMO</title>
     <link rel="stylesheet" href="responsive.css" />
-    <link
-      rel="icon"
-      href="https://user-images.githubusercontent.com/2970318/209440270-8940c110-dcd2-45ba-aeef-d316cb241b00.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <nav>
@@ -36,8 +32,8 @@
 
       <ul id="list-menu" class="list-menu">
         <li><a href="#">HOME</a></li>
-        <li><a href="#travel">TRAVEL</a></li>
-        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#travel">ARTICLE</a></li>
+        <li><a href="#about">DOCUMENTATION</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
 
@@ -68,7 +64,7 @@
     </header>
     <main>
       <section id="bromo-photos">
-        <h2>Bromo Mount</h2>
+        <h2>GALERYS BROMO MOUNT</h2>
         <div class="grid-container">
           <div class="bromo-photo-item" id="item-1">
             <img src="img/bromo/bromo-2.jpg" alt="bromo." />
@@ -89,7 +85,7 @@
       </section>
 
       <section id="bromo-facts">
-        <h2>Facts about bromo</h2>
+        <h2>FACTS ABOUT BROMO MOUNT</h2>
         <div class="flex-container">
           <ul>
             <li>Mount Bromo comes from the Sanskrit Brahma, one of the Main Gods
@@ -118,7 +114,7 @@
         </div>
       </section>
       <section id="section-video">
-        <h2>bromo</h2>
+        <h2>DOCUMENTATION</h2>
         <div class="flex-container">
           <iframe
             width="100%"
@@ -134,7 +130,7 @@
       </section>
 
       <section id="form-section">
-        <h2>Join our Bromo!</h2>
+        <h2>CONTACT</h2>
         <form>
           <fieldset class="form-personal">
             <legend>Personal Information</legend>
